RESOLVED FIXED184289
Fix the print formatter build
https://bugs.webkit.org/show_bug.cgi?id=184289
Summary Fix the print formatter build
Beth Dakin
Reported 2018-04-03 21:29:07 PDT
Fix the print formatter build rdar://problem/39164641
Attachments
Patch (5.72 KB, patch)
2018-04-03 21:31 PDT, Beth Dakin
mitz: review-
Patch that addresses Dan's comments (5.03 KB, patch)
2018-04-04 10:05 PDT, Beth Dakin
no flags
Patch, rebased (5.08 KB, patch)
2018-04-04 10:46 PDT, Beth Dakin
no flags
Patch, rebased (5.03 KB, patch)
2018-04-04 11:07 PDT, Beth Dakin
mitz: review+
Beth Dakin
Comment 1 2018-04-03 21:31:22 PDT
mitz
Comment 2 2018-04-03 21:44:10 PDT
Comment on attachment 337143 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=337143&action=review > Source/WebKit/UIProcess/_WKWebViewPrintFormatter.h:37 > +#if ENABLE(MINIMAL_SIMULATOR) > +UIViewPrintFormatter > +#else We don’t use our internal ENABLE() macro in modern WebKit SPI headers. > Source/WebKit/UIProcess/_WKWebViewPrintFormatter.h:41 > +#if !ENABLE(MINIMAL_SIMULATOR) Ditto.
Beth Dakin
Comment 3 2018-04-04 10:05:17 PDT
Created attachment 337182 [details] Patch that addresses Dan's comments
Beth Dakin
Comment 4 2018-04-04 10:46:48 PDT
Created attachment 337189 [details] Patch, rebased
Beth Dakin
Comment 5 2018-04-04 11:07:30 PDT
Created attachment 337194 [details] Patch, rebased
Beth Dakin
Comment 6 2018-04-04 11:29:21 PDT
Radar WebKit Bug Importer
Comment 7 2018-04-04 11:30:22 PDT
Note You need to log in before you can comment on or make changes to this bug.