Fix the print formatter build https://bugs.webkit.org/show_bug.cgi?id=184289 -and corresponding- rdar://problem/39164641

Reviewed by Dan Bernstein.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _webViewPrintFormatter]):
* UIProcess/API/Cocoa/WKWebViewInternal.h:
* UIProcess/_WKWebViewPrintFormatter.h:
* UIProcess/_WKWebViewPrintFormatter.mm:
* UIProcess/_WKWebViewPrintFormatterInternal.h:
* UIProcess/ios/WKContentView.mm:
* UIProcess/ios/WKPDFView.mm:



Canonical link: https://commits.webkit.org/199859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230268 268f45cc-cd09-0410-ab3c-d52691b4dbfc