Source/WebKit/UIProcess/ios/WKContentView.mm
@@ -676,6 +676,8 @@ static void storeAccessibilityRemoteConnectionInformation(id element, pid_t pid,
 
 #pragma mark Printing
 
+#if !ENABLE(MINIMAL_SIMULATOR)
+
 @interface WKContentView (_WKWebViewPrintFormatter) <_WKWebViewPrintProvider>
 @end
 
@@ -741,5 +743,7 @@ static void storeAccessibilityRemoteConnectionInformation(id element, pid_t pid,
 }
 
 @end
+
+#endif // !ENABLE(MINIMAL_SIMULATOR)
 
 #endif // PLATFORM(IOS)
